# PY01-ViajesApp

./: .gitignore  Dockerfile  Estructura base.ipynb  README.md  app.py  db.py  docker-compose.yml  mongodb.ipynb  pyproject.toml  testdb.py
.github/workflows/: docker-image.yml  push_to_docker.yml
db/: 01-init.sql  02-sp.sql
models/: NewPost.py  PostsMongo.py  Trips.py  posts.py  user.py
tests/: testdb.py
