[tool.poetry]
name = "py01-viajesapp"
version = "0.1.0"
description = ""
authors = ["Nesscafe <darkskull328@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.31.0"
fastapi = "^0.115.0"
psycopg2 = "^2.9.9"
pymongo = "^4.10.1"
redis = "^5.1.1"
passlib = "^1.7.4"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
pytest-asyncio = "^0.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"